--- a/index.ejs
+++ b/index.ejs
@@ -1,33 +1,49 @@
 <% layout('layouts/boilerplate')%>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Organizations</title>
+</head>
+<body>
+   <h1>organizations</h1> 
+</body>
+</html>
+
+
+
+
+
+<!--<%# layout('layouts/boilerplate')%>
 <link rel="stylesheet" href="/stylesheets/index.css">
 <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@900&display=swap" rel="stylesheet">
 
-<h1>GOODAS</h1>
+<h1>Organizations</h1>
 <div>
-    <a class="btn btn-outline-dark" href="/goodas/new">Make your own GOODA</a>
+    <a class="btn btn-outline-dark" href="/organizations/new">Your organization</a>
 </div>
-<% for (let gooda of goodas){%>
+<%# for (let organization of organizations){%>
 <div class="card" mb-3>
     <div class="row">
         <div class="col-md-4">
-            <%if(gooda.images.length) {%>
-            <img class="img-fluid" alt="" src="<%=gooda.images[0].url%>">
-    <% }else{%>
+            <%#if(organization.images.length) {%>
+            <img class="img-fluid" alt="" src="<%#=organization.images[0].url%>">
+    <%# }else{%>
         <img class="img-fluid" alt=""
     scr="https://res.cloudinary.com/dfofplzot/image/upload/v1664613498/gooda/gooda/passion_led_us_here_mcrpdo.avif">
-<% } %>
+<%# } %>
 
  </div>
         <div class="col-md-8">
             <div class="card-body">
-                <h5 class="card-title"><%= gooda.title %> </h5>
-                <p class="card-text"><%= gooda.description %></p>
-               <!--<p class="card-text">
-                    <small class="text-muted"><%= gooda.location%></small>
-                </p>-->
-                <a class="btn btn-outline-dark" href="/goodas/<%=gooda._id%>">View <%=gooda.title%></a>
+                <h5 class="card-title"><%#= organization.title %> </h5>
+                <p class="card-text"><%#= organization.description %></p>
+            
+                <a class="btn btn-outline-dark" href="/organizations/<%#=organization._id%>">View <%#=organization.title%></a>
             </div>
         </div>
     </div>
 </div>
-<% }%>
+<%# }%>
