--- a/show.ejs
+++ b/show.ejs
@@ -5,21 +5,21 @@
         <div class="col-md-6 offset-md-3 col-m-4 offset-m-4">
             <div class="card shadow">
           
-        <div id="goodaCarousel" class="carousel slide" data-ride="carousel">
+        <div id="organizationCarousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
-                <% gooda.images.forEach((img, i) => {  %>
+                <% organization.images.forEach((img, i) => {  %>
                 <div class="carousel-item <%= i === 0 ? 'active' : ''%>">
                     <img src="<%= img.url%>" class="d-block w-100" alt="">
                 </div>
                 <% }) %>
 
             </div>
-            <% if(gooda.images.length > 1) {%>
-            <a class="carousel-control-prev" href="#goodaCarousel" role="button" data-slide="prev">
+            <% if(organizatio.images.length > 1) {%>
+            <a class="carousel-control-prev" href="#organizationCarousel" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
             </a>
-            <a class="carousel-control-next" href="#goodaCarousel" role="button" data-slide="next">
+            <a class="carousel-control-next" href="#organizationCarousel" role="button" data-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
             </a>
@@ -28,18 +28,18 @@
 
         <div class="card mb-3">
             <div class="card-body">
-                <h5 class="card-title"><%= gooda.title%></h5>
-                <p class="card-text"><%= gooda.description%></p>
+                <h5 class="card-title"><%= organization.title%></h5>
+                <p class="card-text"><%= organization.description%></p>
             </div>
             <ul class="list-group list-group-flush">
-               <!-- <li class="list-group-item text-muted"><%= gooda.location%></li>-->
-                <li class="list-group-item" id="submitted">Submitted by <%= gooda.author.username%></li>
-                <li class="list-group-item">Donated $<%= gooda.price%></li>
+               <!-- <li class="list-group-item text-muted"><%= organization.location%></li>-->
+                <li class="list-group-item" id="submitted">Submitted by <%= organization.author.username%></li>
+                <li class="list-group-item">Donated $<%= organization.price%></li>
 
-            <%  if( currentUser && gooda.author.equals(currentUser._id))  {%>
+            <%  if( currentUser && organization.author.equals(currentUser._id))  {%>
             <div class="card-body">
-                <a class="card-link btn btn-outline-dark" href="/goodas/<%=gooda._id%>/edit">My GOODA</a>
-                <form class="d-inline" action="/goodas/<%=gooda._id%>?_method=DELETE" method="POST">
+                <a class="card-link btn btn-outline-dark" href="/organizations/<%=organization._id%>/edit">Our organization</a>
+                <form class="d-inline" action="/organizations/<%=organization._id%>?_method=DELETE" method="POST">
                     <button class="btn btn-danger">Delete</button>
                 </form>
             </div>
@@ -48,12 +48,16 @@
                Do Good. Every Day
             </div>
         </div>
+
     </div>
-    <br><br>
    <!-- <div class="col-md-6 offset-md-3 col-m-4 offset-m-4">-->
-         <% if(currentUser){ %>
-        <h2>What do you think about this GOODA?</h2>
-        <form action="/goodas/<%=gooda._id%>/reviews" method="POST" class="mb-3 validated-form" novalidate>
+        <% if(currentUser){ %>
+        <h2>Your comment</h2>
+        <form action="/organizations/<%=organization._id%>/reviews" method="POST" class="mb-3 validated-form" novalidate>
+            <!-- <div class="mb-3">
+                <label class="form-label" for="rating">Rating</label>
+                <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
+            </div> -->
             <fieldset class="starability-heart">
                 <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked
                     aria-label="No rating." />
@@ -75,32 +79,26 @@
                     valid
                 </div>
             </div>
-            <button class="btn btn-outline-success">Post Comment</button>
+            <button class="btn btn-outline-dark">Post Comment</button>
         </form>
-<br><br>
-
-<h2>Appreciations</h2>
         <% } %>
-        <% for(let review of gooda.reviews) { %>
+        <% for(let review of organization.reviews) { %>
         <div class="card mb-3 ">
             <div class="card-body">
-                <h4 class="card-title"> <%= review.author.username%></h4>
+                <h5 class="card-title"> <%= review.author.username%></h5>
                 <p class="starability-result" data-rating="<%=review.rating%>">
                     Rated: <%= review.rating %> stars
                 </p>
                 <!-- <h6 class="card-subtitle mb-2 text-muted">By <%= review.author.username%></h6> -->
-                <p class="card-text"><%= review.body %></p>
+                <p class="card-text">Review: <%= review.body %></p>
                 <%  if( currentUser && review.author.equals(currentUser._id))  {%>
-                <form action="/goodas/<%=gooda._id%>/reviews/<%=review._id%>?_method=DELETE" method="POST">
+                <form action="/organizations/<%=organization._id%>/reviews/<%=review._id%>?_method=DELETE" method="POST">
                     <button class="btn btn-sm btn-danger">Delete</button>
                 </form>
                 <% } %>
             </div>
         </div>
         <% } %>
-       
-        <div>
-            <a class="btn btn-outline-dark" href="/goodas">cancel</a>
-        </div>
+        <a href="/organizations">cancel</a>
     </div>
 </div>
